--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@
     <title>404</title>
 </head>
 <body>
-    <h1>Error 404 page not found.</h1>
+    <h1>Error 404, page not found.</h1>
 </body>
 </html>
