Arreglo de link de css en todos los html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Phasmophobia is a 4 co-op game about investigation of ghosts in haunted houses using specialized equipment to detect different paranormal events.">
         <meta name="keywords" content="phasmophobia, phasmo, phasmophobia home, kinetic games, kinetic">
         <title>Home - Phasmophobia</title><link nes rel="icon" sizes="192x192" href="./images/phasmo-logo.ico"/><link nes rel="icon" sizes="128x128" href="./images/phasmo-logo.ico"/>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
 
