--- a/ghosts.html
+++ b/ghosts.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="phasmophobia ghosts, phasmophobia, phasmo ghosts, phasmo">
         <title>Ghosts - Phasmophobia</title><link nes rel="icon" sizes="192x192" href="./images/phasmo-logo.ico" /><link nes rel="icon" sizes="128x128" href="./images/phasmo-logo.ico"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
 
