--- a/404.html
+++ b/404.html
@@ -8,14 +8,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
-    <header>
-
-    </header>
-    <h1>Error 404, page not found.</h1>
-    <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Click me!</a>
-    <footer>
-        
-    </footer>
+    <header></header>
+    <main>
+        <h1>Error 404, page not found.</h1>
+        <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Click me!</a>
+    </main>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
