Cambio en sass y modificacion de html agregando una galeria en grid

--- a/ghosts.html
+++ b/ghosts.html
@@ -14,7 +14,7 @@
 
     <body>
         <!-- Header -->
-        <header class="navbar navbar-expand-md navbar-dark sticky-top">
+        <header class="navbar navbar-expand-md navbar-dark sticky-top section-bg">
 			<a href="index.html"><img class="nav__image" src="./images/phasmo-title.png" alt="Phasmophobia Logo" /></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -47,8 +47,14 @@
             <!-- Ghost description -->
             <section class="content">
                 <h2>Ghosts</h2>
-                <img class="content__image" src="./images/ghosts.jpg" alt="Four different looks of ghosts">
-                <img class="content__image" src="./images/ghost.jpg" alt="Random look of a ghost">
+                <div class="container">
+                    <div class="collage"></div>
+                    <div class="hunt"></div>
+                    <div class="torn"></div>
+                    <div class="ghost"></div>
+                    <div class="mouth"></div>
+                    <div class="sil"></div>
+                </div>
                 <p class="content__text">Ghosts are the main focus of <strong>Phasmophobia</strong>. The game offers fully procedural
                     ghosts, meaning each game will be different. This will require you and
                     your team to do some detective work to find out what type of ghost it is and how to deal with it.
