--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
-    <header></header>
+    <header class="section-bg"></header>
     <main>
         <h1>Error 404, page not found.</h1>
         <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Click me!</a>
