--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <!-- Header -->
-        <header class="navbar navbar-expand-md navbar-dark sticky-top">
+        <header class="navbar navbar-expand-md navbar-dark sticky-top section-bg">
 			<a href="index.html"><img class="nav__image" src="./images/phasmo-title.png" alt="Phasmophobia Logo" /></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
