--- a/maps.html
+++ b/maps.html
@@ -14,7 +14,7 @@
 
     <body>
         <!-- Header -->
-        <header class="navbar navbar-expand-md navbar-dark sticky-top">
+        <header class="navbar navbar-expand-md navbar-dark sticky-top section-bg">
 			<a href="index.html"><img class="nav__image" src="./images/phasmo-title.png" alt="Phasmophobia Logo" /></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -64,7 +64,7 @@
                                 <img src="./images/maps.jpg" class="d-block w-100 imgCarousel" alt="Maps">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/modern.jpg" class="d-block w-100 imgCarousel" alt="Modern House">
+                                <img src="./images/modern.png" class="d-block w-100 imgCarousel" alt="Modern House">
                             </div>
                             <div class="carousel-item">
                                 <img src="./images/cabin.png" class="d-block w-100 imgCarousel" alt="Cabin">
