Cambio en la clase de galeria porque chocaba con la clase del formulario

--- a/ghosts.html
+++ b/ghosts.html
@@ -47,7 +47,7 @@
             <!-- Ghost description -->
             <section class="content">
                 <h2>Ghosts</h2>
-                <div class="container">
+                <div class="gallery">
                     <div class="collage"></div>
                     <div class="hunt"></div>
                     <div class="torn"></div>
