--- a/404.html
+++ b/404.html
@@ -7,13 +7,55 @@
         <title>404</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-<body>
-    <header class="section-bg"></header>
-    <main>
-        <h1>Error 404, page not found.</h1>
-        <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Click me!</a>
-    </main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <body>
+        <!-- Header -->
+        <header class="navbar navbar-expand-md navbar-dark sticky-top section-bg">
+            <a href="index.html"><img class="nav__image" src="./images/phasmo-title.png" alt="Phasmophobia Logo" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-lg-0 justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link text-decoration-underline" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ghosts.html">Ghosts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="evidence.html">Evidence</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="equipment.html">Equipments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="maps.html">Maps</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <!-- Main -->
+        <main>
+            <h1>Error 404, page not found.</h1>
+            <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Click me!</a>
+        </main>
+        <!-- Footer -->
+        <footer>
+            <h2>Kinetic Games.</h2>
+            <p><strong>Kinetic Games</strong> is the company that created <strong>Phasmophobia.</strong></p>
+            <ul>
+                <li>
+                    <a href="https://discord.gg/phasmophobia" target="_newblank"><img src="./images/ds_logo.jpg" width="32" alt="Discord logo"></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/KineticGame" target="_newblank"><img src="./images/tw_logo.jpg" width="32" alt="Twitter logo"></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCEyR7e-25KW9-oNv_CY8CSw" target="_newblank"><img src="./images/yt_logo.jpg" width="32" alt="Youtube logo"></a>
+                </li>
+                <li>
+                    <a href="http://store.steampowered.com/app/739630/Phasmophobia" target="_newblank"><img src="./images/sm_logo.jpg" width="32" alt="Steam logo"></a>
+                </li>
+            </ul>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
 </html>
