Arreglo en 404 y renombre de carpeta de pages

--- a/404.html
+++ b/404.html
@@ -33,9 +33,9 @@
             </div>
         </header>
         <!-- Main -->
-        <main>
+        <main class="intro">
             <h1>Error 404, page not found.</h1>
-            <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Click me!</a>
+            <a href="index.html"><img src="./images/phasmo-title.png"  alt="Phasmophobia logo.">Go homepage!</a>
         </main>
         <!-- Footer -->
         <footer>
